Fix AS5600 register reads, test scripts, and sigrok decoder
- Fix raw register reads: all 12-bit values are right-justified in
  bits[11:0]; replace (raw >> 4) & 0x0FFF with raw & 0x0FFF in
  Python (as5600.py) and C++ (AS5600.cpp) for angle_raw, raw_angle,
  magnitude, zero_position, max_position, max_angle
- Add missing chip_defaults entry: as5600 0x36
- All test scripts (Python/C++/Node.js/Rust/JVM): add 60 s / 5 Hz
  magnet-status polling loop before construction so tests run
  regardless of MD flag; bypass constructor via __new__, Object.create,
  or Unsafe.allocateInstance where the constructor raises on MD=0
- Fix sigrok as5600 decoder: stacked decoders use decode(self, ss, es,
  data) not the generator-based decode(self)+self.wait() form; fix
  pdata[0] → pdata (raw byte not tuple); fix START REPEAT condition
  (GET_DATA_WRITE+empty buf, not GET_REG_PTR); improve no-pointer
  warning message

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>